--- a/LaidigSystemsC/packages.config
+++ b/LaidigSystemsC/packages.config
@@ -2,6 +2,8 @@
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
   <package id="bootstrap" version="3.3.7" targetFramework="net452" />
+  <package id="Common.Logging" version="3.3.1" targetFramework="net452" />
+  <package id="Common.Logging.Core" version="3.3.1" targetFramework="net452" />
   <package id="CsvHelper" version="2.16.3.0" targetFramework="net452" />
   <package id="dropzone" version="4.2.0" targetFramework="net452" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
@@ -31,6 +33,7 @@
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="PagedList" version="1.17.0.0" targetFramework="net452" />
   <package id="PagedList.Mvc" version="4.5.0.0" targetFramework="net452" />
+  <package id="Quartz" version="2.4.1" targetFramework="net452" />
   <package id="Respond" version="1.4.2" targetFramework="net452" />
   <package id="WebGrease" version="1.6.0" targetFramework="net452" />
 </packages>
